--- a/templates/input.html
+++ b/templates/input.html
@@ -3,8 +3,8 @@
 <head>
     <title>個人家計簿　～支出入力～</title>
     <meta charset="utf-8">
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+</head>    
 <body data-page="input">
     <div class="page_header">
         <button id="menu-toggle">&#9776;</button> <!-- ハンバーガーメニューのボタン -->
@@ -16,9 +16,9 @@
     <nav class="menu-bar" id="sidebar">
         <h1>メニュー</h1>
         <ul>
-            <li><a href="index.html">ホーム</a></li>
-            <li><a href="input.html">支出入力</a></li>
-            <li><a href="analysis.html">支出分析</a></li>
+            <li><a href="{{ url_for('index') }}">ホーム</a></li>
+            <li><a href="{{ url_for('input_page') }}">支出入力</a></li>
+            <li><a href="{{ url_for('analysis_page') }}">支出分析</a></li>
         </ul>
     </nav>
 
@@ -117,7 +117,7 @@
 
     <footer>最終更新日:</footer>
     <!-- JavaScriptを読み込む -->
-    <script src="scripts.js"></script>
-    <script src="expense.js"></script>
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='expense.js') }}"></script>
 </body>
 </html>
