--- a/templates/input.html
+++ b/templates/input.html
@@ -94,6 +94,8 @@
         
                 <!-- 送信ボタン -->
                 <button type="submit">登録</button>
+                <!-- 削除ボタン -->
+                <button type="button" id="data-delete">削除</button>
             </form>
         </div>
         <div class="data-table">
