--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -22,12 +22,20 @@
     </nav>
 
     <div class="container">
-        <h2>支出・収入のグラフ</h2>
-        {% if graph_url %}
-            <img src="{{ graph_url }}" alt="Expense Graph">
-        {% else %}
-            <p>データがありません。</p>
-        {% endif %}
+        <h2>支出のグラフ</h2>
+        <div class="graph_container">
+            {% if graph_url %}
+                <img src="{{ graph_url }}" alt="分類別各月の支出金額">
+            {% else %}
+                <p>データがありません。</p>
+            {% endif %}
+        
+            {% if pie_chart_url %}
+                <img src="{{ pie_chart_url }}" alt="分類別年間の支出割合">
+            {% else %}
+                <p>データがありません。</p>
+            {% endif %}
+        </div>
     </div>
     <footer>最終更新日:</footer>
     <!-- JavaScriptを読み込む -->
