--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -24,17 +24,29 @@
     <div class="container">
         <h2>支出のグラフ</h2>
         <div class="graph_container">
-            {% if graph_url %}
-                <img src="{{ graph_url }}" alt="分類別各月の支出金額">
-            {% else %}
-                <p>データがありません。</p>
-            {% endif %}
+            <table border="1">
+                <tr>
+                    <th>分類別各月の支出金額</th>
+                    <th>分類別年間の支出割合</th>
+                </tr>
+                <tr>
+                    <td>
+                        {% if graph_url %}
+                            <img src="{{ graph_url }}" alt="分類別各月の支出金額">
+                        {% else %}
+                            <p>データがありません。</p>
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if pie_chart_url %}
+                            <img src="{{ pie_chart_url }}" alt="分類別年間の支出割合">
+                        {% else %}
+                            <p>データがありません。</p>
+                        {% endif %}
+                    </td>
+                </tr>
+            </table>
         
-            {% if pie_chart_url %}
-                <img src="{{ pie_chart_url }}" alt="分類別年間の支出割合">
-            {% else %}
-                <p>データがありません。</p>
-            {% endif %}
         </div>
     </div>
     <footer>最終更新日:</footer>
