--- a/static/style.css
+++ b/static/style.css
@@ -288,17 +288,19 @@ button[type="submit"]:hover {
     font-size: 18px;
 }
 
-.graph-container {
+.graph_container {
     text-align: center;  /* 画像を中央に配置 */
     margin: 20px 0;
 }
 
-.graph-container img {
-    width: 55%;  /* 画像の幅を80%に調整 */
-    max-width: 200px;  /* 最大サイズを200pxに制限 */
+.graph_container img {
+    width: 100%;  /* 画像の幅を100%に調整 */
+    max-width: 900px;  /* 最大サイズを900pxに制限 */
     height: auto;  /* アスペクト比を維持 */
-    border: 2px solid #ccc; /* 枠線をつける（任意） */
-    border-radius: 10px; /* 角を丸くする（任意） */
+}
+
+.graph_container table th {
+    background-color: lightgreen;
 }
 
 footer {
