--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -55,6 +55,22 @@
                         {% endif %}
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        {% if graph_url %}
+                            <img src="{{ graph_user_url }}" alt="分類別各月の支出金額">
+                        {% else %}
+                            <p>データがありません。</p>
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if pie_chart_url %}
+                            <img src="{{ pie_user_chart_url }}" alt="分類別年間の支出割合">
+                        {% else %}
+                            <p>データがありません。</p>
+                        {% endif %}
+                    </td>
+                </tr>
             </table>
         
         </div>
