--- a/static/style.css
+++ b/static/style.css
@@ -343,6 +343,10 @@ button[type="submit"]:hover {
     background-color: lightgreen;
 }
 
+.view_erea {
+    text-align: center;  /* 画像を中央に配置 */
+}
+
 footer {
     width: 100%; /* 画面幅いっぱいに広げる */
     max-width: 100vw; /* 画面幅を超えないようにする */
