フォルダー構成とCSSを分解して可読性を向上

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -4,6 +4,7 @@
     <title>個人家計簿　～支出分析～</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='analysis_screen.css') }}">
 </head>
 <body data-page="analysis">
     <div class="page_header">
