--- a/templates/input.html
+++ b/templates/input.html
@@ -4,6 +4,7 @@
     <title>個人家計簿　～支出入力～</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='input_screen.css') }}">
 </head>    
 <body data-page="input">
     <div class="page_header">
