--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>個人家計簿　～ホーム～</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index_screen.css') }}">
 </head>
 <body data-page="home">
     <div class="page_header">
@@ -128,5 +129,6 @@
     <footer>最終更新日:</footer>
     <!-- JavaScriptを読み込む -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='adjustTableHeader.js') }}"></script>
 </body>
 </html>
