--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <div class="container">
-        <h2>支出・収入のグラフ</h2>
+        <h2>精算金額</h2>
         <form method="POST">
             <label for="year">年を選択：</label>
             <select name="year" id="year" onchange="this.form.submit()">
