--- a/static/analysis_screen.css
+++ b/static/analysis_screen.css
@@ -1,6 +1,22 @@
+.container form {
+    margin-left: 15px;
+    font-size: 16px;
+}
+
+.container form select {
+    font-size: 20px;
+    padding: 5px;
+    border: 3px solid #333;       /* 枠線の太さと色 */
+    border-radius: 8px;           /* 角を丸く */
+}
+
 .graph_container {
     text-align: center;  /* 画像を中央に配置 */
     margin: 20px 0;
+}
+
+.graph_container table {
+    width: 100%;
 }
 
 .graph_container img {
@@ -11,4 +27,10 @@
 
 .graph_container table th {
     background-color: lightgreen;
+}
+
+.analysis_label {
+    font-size: 24px;
+    font-weight: bold;
+    writing-mode: vertical-rl; /* または vertical-lr */
 }
