--- a/static/input_screen.css
+++ b/static/input_screen.css
@@ -21,6 +21,7 @@
 .input-form label {
     margin-top: 10px; /* 上部に余白を追加 */
     text-align: left;
+    font-size: 18px;
     width: 80px;
     background-color: lightgray;
 }
@@ -31,6 +32,7 @@
     max-width: 100%; /* フォームの枠を超えないように */
     padding: 5px;
     margin-top: 5px;
+    font-size: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -75,15 +77,15 @@ table {
 /* 送信ボタン（type="submit" のみ適用） */
 button[type="submit"] {
     width: 48%;         /* 幅いっぱいに広げる */
-    padding: 15px;       /* ボタンを大きくする */
-    font-size: 18px;     /* 文字を大きくする */
+    padding: 22px;       /* ボタンを大きくする */
+    font-size: 32px;     /* 文字を大きくする */
     font-weight: bold;   /* 文字を太くする */
     background-color: slategray;
     color: white;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    margin-top: 10px;    /* 🔥 上のフォームとの間にスペースを作る */
+    margin-top: 15px;    /* 🔥 上のフォームとの間にスペースを作る */
     float: left;
 }
 
@@ -96,15 +98,15 @@ button[type="submit"]:hover {
 /* 削除ボタン（id="data-delete" のみ適用） */
 #data-delete {
     width: 48%;         /* 幅いっぱいに広げる */
-    padding: 15px;       /* ボタンを大きくする */
-    font-size: 18px;     /* 文字を大きくする */
+    padding: 22px;       /* ボタンを大きくする */
+    font-size: 32px;     /* 文字を大きくする */
     font-weight: bold;   /* 文字を太くする */
     background-color: slategray;
     color: white;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    margin-top: 10px;    /* 🔥 上のフォームとの間にスペースを作る */
+    margin-top: 15px;    /* 🔥 上のフォームとの間にスペースを作る */
     float: right;
 }
 
@@ -114,13 +116,13 @@ button[type="submit"]:hover {
     color: black;
 }
 
+.data-area h2 {
+    margin-left: 2.5%;
+}
+
 .data-table p {
     font-size: 24px;
     font-weight: bold;
-}
-
-.data-table h2 {
-    margin-left: 20px;
 }
 
 .data-table-wrapper {
@@ -138,13 +140,12 @@ button[type="submit"]:hover {
 
 .data-table thead {
     display: block;
-    width: calc(100% - 17px); /* 💡 スクロールバーの分だけ縮める */
     background-color: lightcoral;
 }
 
 .data-table tbody {
     display: block;
-    max-height: 400px; /* 💡 tbody だけスクロール */
+    max-height: 600px; /* 💡 tbody だけスクロール */
     overflow-y: auto;
     width: 100%;
 }
